@@ -494,6 +494,70 @@ block|,
 name|FLUSH
 block|,
 name|FSYNC
+block|;
+DECL|method|getSyncLevel
+specifier|public
+specifier|static
+name|SyncLevel
+name|getSyncLevel
+parameter_list|(
+name|String
+name|level
+parameter_list|)
+block|{
+if|if
+condition|(
+name|level
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+name|SyncLevel
+operator|.
+name|FLUSH
+return|;
+block|}
+try|try
+block|{
+return|return
+name|SyncLevel
+operator|.
+name|valueOf
+argument_list|(
+name|level
+operator|.
+name|toUpperCase
+argument_list|()
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|ex
+parameter_list|)
+block|{
+name|log
+operator|.
+name|warn
+argument_list|(
+literal|"There was an error reading the SyncLevel - default to "
+operator|+
+name|SyncLevel
+operator|.
+name|FLUSH
+argument_list|,
+name|ex
+argument_list|)
+expr_stmt|;
+return|return
+name|SyncLevel
+operator|.
+name|FLUSH
+return|;
+block|}
+block|}
 block|}
 DECL|enum|State
 DECL|enum constant|REPLAYING
@@ -1033,6 +1097,25 @@ operator|.
 name|get
 argument_list|(
 literal|"dir"
+argument_list|)
+expr_stmt|;
+name|defaultSyncLevel
+operator|=
+name|SyncLevel
+operator|.
+name|getSyncLevel
+argument_list|(
+operator|(
+name|String
+operator|)
+name|info
+operator|.
+name|initArgs
+operator|.
+name|get
+argument_list|(
+literal|"syncLevel"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
